tests/errors/item-private/lib.pa
public def public-fn = fun x {
	x
}

def private-fn = fun x {
	x
}
